CREATE TABLE IF NOT EXISTS Compte(
    id SERIAL PRIMARY KEY,
    nom varchar(30) UNIQUE NOT NULL
);