CREATE TABLE IF NOT EXISTS GenresMusicaux(
    nom VARCHAR(30) PRIMARY KEY
);