@startuml
hide circle
skinparam roundcorner 20

class Compte{
    }

class Profil_Utilisateurice{
    id : integer {key}
    nom : string
    mail : string
    mdp : string
    date_inscription : date
    statut : {premium, regulier}

}

class Profil_Artiste{
    id : integer {key}
    nom : string
    bio : string
    pays : string
}

class Profil_ArtisteSolo{}

class Profil_Groupe{}

class Chanson{
    id : integer {key}
    titre : string
    duree : int
    genre_musical : string
}

class GenresMusicaux{
    nom : string {key}
}

class Album{
    id : integer {key}
    titre : string
    annee_de_sortie : date
    duree_totale : integer
}

Album : calcul_duree()



class Playlist{
    id : integer {key}
    titre : string
    description : string
    autorisation_acces : {publique, privee, partagee_aux_amies}
    }

Playlist : redondance()
Playlist : verification_autorisation()

class DroitsAuteur{
     metier : {editeur, compositeur, auteur} {local key}
    }


Profil_ArtisteSolo --|>Profil_Artiste
Profil_Groupe -|>Profil_Artiste
Profil_Artiste  --|>Compte
Profil_Utilisateurice --|>Compte
Profil_Utilisateurice *-up- "*" GenresMusicaux : apprécie >
Profil_Utilisateurice "0..*" - "0..*" Profil_Utilisateurice : ami.e.s >
Profil_Utilisateurice "1" - "0..*" Playlist : a créé >
Profil_ArtisteSolo "0..*" - "0..1" Profil_Groupe : fait partie >
Compte "1..*" - "0..*" Chanson : touche des droits >
(Chanson, Compte) .. DroitsAuteur
Album "0..*" - "1" Profil_Artiste : est artiste principal de <
Album  *-up- "*"  Chanson : est dans album <
Chanson "0..*" - "1" Profil_Artiste : est crée par >
Playlist "0..*" -- "0..*" Album : fait partie de <
Playlist  *-up- "*" Chanson : fait partie de <


@enduml
